--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
 
   h1 {
     font-size: 3.125rem;
-    color: var(--gray-900);
+    color: var(--french-violet);
     font-weight: 500;
     line-height: 100%;
     letter-spacing: -0.125rem;
@@ -225,8 +225,10 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <h1>Welcome to {{ title }}!</h1>
+      <p>This is the starter webpage edited by 408 cohort student<br>Anastasiia Zolotova. 🎉</p>
+      <app-description></app-description>
+      <app-about></app-about>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
