--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,1 +1,4 @@
-<p>first works!</p>
+<div [@reusableToggle]="toggle" class="animated-box">
+    <h2>First component</h2>
+    <button (click)="toggleAnimation()">Change state</button>
+</div>
