--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,4 +1,4 @@
-<div style="border: 1px solid var(--electric-violet); padding: 10px; margin-bottom: 10px;">
+<div>
     <h2>Parent component</h2>
     <p>Sending data to child component:</p>
     <app-child [data]="messageToChild"></app-child>
