--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,4 +1,4 @@
-<div style="border: 1px solid var(--french-violet); padding: 10px;">
+<div>
     <h3>Child component</h3>
     <p>Received data: {{ data }}</p>
 </div>
