--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,8 +57,8 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Welcome to {{ title }}!</h1>
-      <p>This is the starter webpage edited by 408 cohort student<br>Anastasiia Zolotova. 🎉</p>
+      <h1 i18n="@@welcomeTitle">Welcome to {{ title }}!</h1>
+      <p i18n="@@welcomeParagraph">This is the starter webpage edited by 408 cohort student Anastasiia Zolotova. 🎉</p>
       <app-description></app-description>
       <app-about></app-about>
       <app-first></app-first>
