--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,4 +1,4 @@
 <div [@reusableToggle]="toggle" class="animated-box">
-    <h2>First component</h2>
-    <button (click)="toggleAnimation()">Change state</button>
+    <h2 i18n>First component</h2>
+    <button (click)="toggleAnimation()" i18n>Change state</button>
 </div>
