--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Parent component</h2>
-    <p>Sending data to child component:</p>
+    <h2 i18n>Parent component</h2>
+    <p i18n>Sending data to child component:</p>
     <app-child [data]="messageToChild"></app-child>
 </div>
