--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,4 +1,4 @@
 <div>
-    <h3>Child component</h3>
-    <p>Received data: {{ data }}</p>
+    <h3 i18n>Child component</h3>
+    <p i18n>Received data: {{ data }}</p>
 </div>
