--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -3,3 +3,4 @@
     <p i18n>Sending data to child component:</p>
     <app-child [data]="messageToChild"></app-child>
 </div>
+<button (click)="navigateToPageThree(123)">Go to Page Three with ID 123</button>
