--- a/src/app/components/second/second.component.css
+++ b/src/app/components/second/second.component.css
@@ -35,7 +35,7 @@ pre {
     padding: 10px;
     border-radius: 4px;
 }
-
+/* 
 button {
     margin-top: 20px;
     margin-right: 20px;
@@ -49,4 +49,4 @@ button {
 
 button:hover {
     background-color: #0056b3;
-}
+} */
